--- a/src/components/blog/EntriesOne.astro
+++ b/src/components/blog/EntriesOne.astro
@@ -3,40 +3,32 @@ import Text from "../fundations/elements/Text.astro";
 import Link from "../fundations/components/Link.astro";
 const { title, url, avatar, tags, pubDate } = Astro.props;
 ---
-
 <Link
   href={url}
   title={title}
   variant="link"
-  class="grid grid-cols-4 gap-4   md:grid-cols-8 py-4 items-center border-b         border-dotted border-base-200 duration-300 group-hover:opacity-30 hover:opacity-100 peer hover:peer-hover:opacity-30">
+  class="grid grid-cols-4 gap-4 md:grid-cols-8 py-4 items-center border-b border-dotted border-base-200 duration-300 group-hover:opacity-30 hover:opacity-100 peer hover:peer-hover:opacity-30"
+>
   <div class="col-span-full md:col-span-5">
     <Text
       tag="h3"
       variant="textSM"
-      class="text-base-900      font-mono uppercase font-medium hover:opacity-60 2xl:text-base transition-opacity duration-200"
+      class="text-base-900 font-mono uppercase font-medium hover:opacity-60 2xl:text-base transition-opacity duration-200"
       >{title}</Text
     >
   </div>
-
-  <Text
-    tag="p"
-    variant="textXS"
-    class="text-base-400              font-medium uppercase"
+  <Text tag="p" variant="textXS" class="text-base-400 font-medium uppercase"
     ><time datetime="2020-03-16">{tags}</time></Text
   >
   <Text
     tag="p"
     variant="textXS"
-    class="text-base-400              font-medium uppercase lg:mx-auto col-span-2 md:col-span-1"
+    class="text-base-400 font-medium uppercase lg:mx-auto col-span-2 md:col-span-1"
     ><time datetime="2020-03-16">{pubDate}</time></Text
   >
-
   <div
-    class="flex items-center gap-2 text-base-500    col-span-full md:col-span-1 md:ml-auto">
-    <img
-      src={avatar}
-      alt={title}
-      class="size-8 rounded-full"
-    />
+    class="flex items-center gap-2 text-base-500 col-span-full md:col-span-1 md:ml-auto"
+  >
+    <img src={avatar} alt={title} class="size-8 rounded-full" />
   </div>
 </Link>
