--- a/src/components/forms/Reset.astro
+++ b/src/components/forms/Reset.astro
@@ -1,45 +1,73 @@
-<section>
-  <div class="mx-auto max-w-3xl px-8 py-24 sm:py-32">
-    <div>
-      <p
-        class="text-2xl font-medium tracking-tight text-base-900      sm:text-4xl">
-        Reset your password
-      </p>
-    </div>
+---
+import Link from "@/components/fundations/components/Link.astro";
+import Text from "@/components/fundations/elements/Text.astro";
+import Button from "@/components/fundations/components/Button.astro";
+import Wrapper from "@/components/fundations/containers/Wrapper.astro";
+---
 
-    <form class="mt-12 lg:mt-24 border-y         py-12">
-      <!-- Email Field -->
+<section>
+  <Wrapper
+    variant="heroNarrow"
+    class="relative flex flex-col items-center justify-center h-svh"
+  >
+    <div class="text-center">
+      <Text
+        tag="h1"
+        variant="textXL"
+        class="text-base-900 font-mono uppercase font-medium tracking-tighter 2xl:text-3xl"
+      >
+        Reset your password
+      </Text>
+    </div>
+    <form
+      action="#"
+      method="POST"
+      class="relative w-full max-w-sm mx-auto mt-4 overflow-y-auto bg-white ring-1 ring-base-200 rounded-2xl p-8 lg:p-12"
+    >
       <div>
-        <label
-          for="email"
-          class="sr-only"
-          >Email</label
-        >
+        <label class="text-xs mb-1 text-base-500 font-medium">First name</label>
+        Email
+      </div>
+      <div class="mt-2.5">
         <input
           type="email"
           name="email"
           id="email"
-          placeholder="Enter your email"
           autocomplete="email"
-          class="block w-full rounded-lg border-0 py-3 px-3.5 text-sm leading-6 text-base-900 bg-base-100       placeholder:text-base-400 focus:ring-2 focus:ring-inset focus:ring-accent-400        "
-          aria-describedby="emailHelp"
+          required
+          aria-required="true"
+          aria-describedby="email-error"
+          placeholder="Your email"
+          class="block w-full h-9 px-4 py-2 text-sm text-base-700 duration-300 bg-white border border-transparent rounded-lg appearance-none ring-1 ring-base-200 placeholder-base-400 focus:border-base-300 focus:bg-transparent focus:outline-none focus:ring-base-500 focus:ring-offset-2 focus:ring-2 sm:text-sm"
         />
-        <p
-          id="emailHelp"
-          class="mt-2 text-sm text-base-500   ">
-          We'll email you a link to reset your password.
-        </p>
-      </div>
-
-      <!-- Submit Button -->
-      <div class="mt-4">
-
-        <button
-          type="submit"
-          class="inline-flex items-center gap-2 justify-center rounded-lg py-3 px-6 text-sm outline-offset-2 transition bg-black text-white font-medium hover:bg-base-800           group w-full lg:w-auto border border-white/20">
-          Send Reset Link
-        </button>
+        <span id="email-error" class="text-red-600 text-sm hidden">
+          Please enter a valid email address.
+        </span>
       </div>
     </form>
-  </div>
+    <div class="mt-4">
+      <Button
+        size="sm"
+        submit="true"
+        variant="default"
+        class="w-full justify-center"
+      >
+        Sign in
+      </Button>
+    </div>
+    <div class="flex items-center justify-between mt-4 w-full">
+      <Text tag="p" variant="textSM" class="text-base-500 font-semibold">
+        Don't have an account?
+      </Text>
+      <Text tag="p" variant="textSM">
+        <Link
+          variant="link"
+          href="#_"
+          class="text-accent-500 hover:text-base-500 font-semibold"
+        >
+          Sign up
+        </Link>
+      </Text>
+    </div>
+  </Wrapper>
 </section>
