--- a/src/pages/tools/tags/index.astro
+++ b/src/pages/tools/tags/index.astro
@@ -7,19 +7,22 @@ import { getCollection } from "astro:content";
 const allTools = await getCollection("tools");
 const tags = [...new Set(allTools.map((post) => post.data.tags).flat())];
 ---
+
 <BaseLayout>
   <section>
     <Wrapper variant="hero">
       <Text
         tag="h1"
         variant="displaySM"
-        class="text-base-900 tracking-tighter      2xl:text-5xl">
+        class="text-base-900 tracking-tighter 2xl:text-5xl"
+      >
         Explore, and discover new resources.
       </Text>
       <Text
         tag="p"
         variant="textMD"
-        class="mt-4 text-base-500 text-balance    2xl:text-xl">
+        class="mt-4 text-base-500 text-balance 2xl:text-xl"
+      >
         Here you will find all the tags for our resources.
       </Text>
       <ul role="list" class="flex flex-col prose-styles mt-12">
@@ -29,8 +32,9 @@ const tags = [...new Set(allTools.map((post) => post.data.tags).flat())];
               title={tag}
               variant="link"
               aria-label={tag}
-              href={`/tools/tags/category/${tag}`}
-              class="text-accent-500      font-medium">
+              href={`/tools/tags/${tag}`}
+              class="text-accent-500 capitalize font-medium"
+            >
               {tag}
             </Link>
           ))
