--- a/src/components/system/Overview.astro
+++ b/src/components/system/Overview.astro
@@ -29,7 +29,10 @@ const pages = [
       {
         name: "System",
         links: [
-          { href: "/system/styleguide", text: "Style Guide" },
+          { href: "/system/links", text: "Links" },
+          { href: "/system/buttons", text: "Buttons" },
+          { href: "/system/colors", text: "Colors" },
+          { href: "/system/typography", text: "Typography" },
           {
             href: "https://lexingtonthemes.com/legal/license",
             text: "License",
