--- a/src/pages/system/buttons.astro
+++ b/src/pages/system/buttons.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
-import StyleGuide from "@/components/system/StyleGuide.astro";
+import ButtonComponent from "@/components/system/Buttons.astro";
 ---
 <BaseLayout>
-  <StyleGuide />
+  <ButtonComponent />
 </BaseLayout>
